--- a/src/app/utils/payload-creator/payload-field/payload-field.component.html
+++ b/src/app/utils/payload-creator/payload-field/payload-field.component.html
@@ -19,9 +19,9 @@
             <span class="text ml-2">{{checkbox.checked}}</span>
         </div>
         <div class="d-flex align-items-center justify-content-end action-holder">
-            <span class="d-flex align-items-center justify-content-center icon ml-2 hover dsi dsi-minus-circle"
+            <span class="d-flex align-items-center justify-content-center icon hover dsi dsi-minus-circle"
                 (click)="removeField()"></span>
-            <span class="d-flex align-items-center justify-content-center icon ml-2 hover dsi dsi-plus-circle"
+            <span class="d-flex align-items-center justify-content-center icon hover dsi dsi-plus-circle"
                 (click)="addField()"></span>
         </div>
     </div>
