--- a/src/app/utils/payload-creator/payload-creator.component.html
+++ b/src/app/utils/payload-creator/payload-creator.component.html
@@ -1,11 +1,11 @@
 <div class="d-flex flex-column w-100">
-    <div class="d-flex border-top border-bottom negative-margin w-100 bg-light text-muted font-12">
+    <div class="field-header d-flex border rounded negative-margin w-100 bg-light text-muted font-12">
         <span class="key-holder flex-fill px-2">Key</span>
         <span class="type-holder px-2">Type</span>
         <span class="value-holder px-2">Value</span>
         <span class="action-holder px-2"></span>
     </div>
-    <div class="d-flex border-top border-bottom negative-margin w-100">
+    <div class="field-wrapper d-flex border rounded negative-margin w-100">
         <input type="text" class="key-holder flex-fill px-2" value="ROOT" disabled="true">
         <select id="type" class="type-holder px-2" [(ngModel)]="globalType">
             <option value="object">Object</option>
@@ -17,6 +17,8 @@
                 (click)="addFromRoot()"></span>
         </div>
     </div>
-    <odp-payload-object *ngIf="globalType=='object'" [data]="data" (dataChange)="onDataChange($event)" [addChild]="triggerAddChild"></odp-payload-object>
-    <odp-payload-array *ngIf="globalType=='array'" [data]="data" (dataChange)="onDataChange($event)" [addChild]="triggerAddChild"></odp-payload-array>
+    <odp-payload-object *ngIf="globalType=='object'" [data]="data" (dataChange)="onDataChange($event)"
+        [addChild]="triggerAddChild"></odp-payload-object>
+    <odp-payload-array *ngIf="globalType=='array'" [data]="data" (dataChange)="onDataChange($event)"
+        [addChild]="triggerAddChild"></odp-payload-array>
 </div>
