--- a/src/app/utils/payload-creator/payload-field/payload-field.component.html
+++ b/src/app/utils/payload-creator/payload-field/payload-field.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div class="d-flex border-top w-100 border-bottom negative-margin">
+<div class="">
+    <div class="field-wrapper d-flex border rounded w-100 negative-margin">
         <input *ngIf="!parentArray" type="text" class="key-holder flex-fill px-2" [(ngModel)]="field.key"
             (ngModelChange)="onKeyChange($event)" (keyup.enter)="addField()">
         <input *ngIf="parentArray" type="text" class="key-holder flex-fill px-2" [ngModel]="'Index '+index"
@@ -12,13 +12,14 @@
             <option value="array">Array</option>
         </select>
         <input *ngIf="field.type!='boolean'" [type]="getInputType()" class="value-holder px-2" [(ngModel)]="field.value"
-            [disabled]="field.type=='object' || field.type=='array'" (ngModelChange)="onValueChange($event)">
+            [disabled]="field.type=='object' || field.type=='array'" (ngModelChange)="onValueChange($event)"
+            (paste)="onPaste($event)">
         <div *ngIf="field.type=='boolean'" class="value-holder px-2 d-flex align-items-center">
             <input #checkbox [type]="getInputType()" class="" [checked]="field.value"
                 (change)="onValueChange(checkbox.checked)">
             <span class="text ml-2">{{checkbox.checked}}</span>
         </div>
-        <div class="d-flex align-items-center justify-content-end action-holder">
+        <div class="d-flex align-items-center justify-content-end action-holder bg-white">
             <span class="d-flex align-items-center justify-content-center icon hover dsi dsi-minus-circle"
                 (click)="removeField()"></span>
             <span class="d-flex align-items-center justify-content-center icon hover dsi dsi-plus-circle"
