Node List in Payload Creator for Suggestions.

--- a/src/app/utils/payload-creator/payload-creator.component.html
+++ b/src/app/utils/payload-creator/payload-creator.component.html
@@ -17,8 +17,8 @@
                 (click)="addFromRoot()"></span>
         </div>
     </div>
-    <odp-payload-object *ngIf="globalType=='object'" [data]="data" (dataChange)="onDataChange($event)"
-        [addChild]="triggerAddChild"></odp-payload-object>
-    <odp-payload-array *ngIf="globalType=='array'" [data]="data" (dataChange)="onDataChange($event)"
-        [addChild]="triggerAddChild"></odp-payload-array>
+    <odp-payload-object *ngIf="globalType=='object'" [nodeList]="nodeList" [data]="data"
+        (dataChange)="onDataChange($event)" [addChild]="triggerAddChild"></odp-payload-object>
+    <odp-payload-array *ngIf="globalType=='array'" [nodeList]="nodeList" [data]="data"
+        (dataChange)="onDataChange($event)" [addChild]="triggerAddChild"></odp-payload-array>
 </div>
