--- a/src/app/utils/payload-creator/payload-field/payload-field.component.scss
+++ b/src/app/utils/payload-creator/payload-field/payload-field.component.scss
@@ -43,3 +43,10 @@
 .highlight {
     background-color: yellow;
 }
+
+.styled-wrapper {
+    position: absolute;
+    height: 32px;
+    width: 260px;
+
+}
