--- a/src/app/utils/payload-creator/payload-field/payload-field.component.html
+++ b/src/app/utils/payload-creator/payload-field/payload-field.component.html
@@ -11,13 +11,14 @@
             <option value="object">Object</option>
             <option value="array">Array</option>
         </select>
-        <div class="d-flex" *ngIf="getInputType()=='text' || getInputType()=='number'" style="width: 260px">
+        <div class="d-flex" *ngIf="getInputType()=='text' || getInputType()=='number'" style="width: 260px"
+            [ngClass]="{'white-bg' : field.type !== 'object' ,'disabled-bg': field.type == 'object' }">
             <!-- <input *ngIf="field.type!='boolean'" [type]="getInputType()" class="value-holder px-2"
                 [(ngModel)]="field.value" [disabled]="field.type=='object' || field.type=='array'"
                 (ngModelChange)="onValueChange($event)" (paste)="onPaste($event)" (keyup.enter)="addField()"> -->
 
 
-            <odp-styled-text (finalValue)="onValueChange($event)" [initValue]="field.value" #typeAhead
+            <odp-styled-text (finalValue)="onValueChange($event)" [value]="field.value" #typeAhead
                 [ngbTypeahead]="search" [resultFormatter]="formatter" [inputFormatter]="formatter"
                 [searchTerm]="searchTerm" class="styled-wrapper" (onPaste)="onPaste($event)" (onEnter)="addField()"
                 [disabled]="field.type=='object'" [pattern]="pattern"></odp-styled-text>
