--- a/src/app/utils/payload-creator/payload-array/payload-array.component.html
+++ b/src/app/utils/payload-creator/payload-array/payload-array.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngFor="let item of fieldList;let i=index">
-    <odp-payload-field [index]="i" [nodeList]="nodeList" [fieldList]="fieldList" [data]="getData(i)" (dataChange)="setData($event,i)"
-        [parentArray]="true"></odp-payload-field>
+    <odp-payload-field [index]="i" [nodeList]="nodeList" [fieldList]="fieldList" [data]="getData(i)"
+        (dataChange)="setData($event,i)" [parentArray]="true" [currNode]="currNode"></odp-payload-field>
 </ng-container>
